objects/Allstream_Service_Order_Item__c/Allstream_Service_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Allstream Service Order Item</label>
    <nameField>
        <displayFormat>SOI-{0000}</displayFormat>
        <label>Allstream Service Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allstream Service Order Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>