objects/Allstream_Service_Order_Item__c/fields/Address_Z__c.field-meta.xml
<CustomField>
    <fullName>Address_Z__c</fullName>
    <label>Address_Z</label>
    <length>200</length>
    <type>Text</type>
</CustomField>