objects/Allstream_Service_Order_Item__c/fields/Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Quantity__c</fullName>
    <label>Available Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>