objects/Allstream_Service_Order_Item__c/fields/BillingAccountBillingID__c.field-meta.xml
<CustomField>
    <fullName>BillingAccountBillingID__c</fullName>
    <formula>Billing_Account__r.Billing_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingAccountBillingID</label>
    <type>Text</type>
</CustomField>