objects/Allstream_Service_Order_Item__c/fields/BillingAccountBPID__c.field-meta.xml
<CustomField>
    <fullName>BillingAccountBPID__c</fullName>
    <formula>Billing_Account__r.BPID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingAccountBPID</label>
    <type>Text</type>
</CustomField>