objects/Allstream_Service_Order_Item__c/fields/Building_Z__c.field-meta.xml
<CustomField>
    <fullName>Building_Z__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Building_Z</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>