objects/Allstream_Service_Order_Item__c/fields/Country_A__c.field-meta.xml
<CustomField>
    <fullName>Country_A__c</fullName>
    <label>Country A</label>
    <length>20</length>
    <type>Text</type>
</CustomField>