objects/Allstream_Service_Order_Item__c/fields/Country_Z__c.field-meta.xml
<CustomField>
    <fullName>Country_Z__c</fullName>
    <label>Country Z</label>
    <length>20</length>
    <type>Text</type>
</CustomField>