objects/Allstream_Service_Order_Item__c/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <label>CurrencyCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>