objects/Allstream_Service_Order_Item__c/fields/Floor_A__c.field-meta.xml
<CustomField>
    <fullName>Floor_A__c</fullName>
    <label>Floor A</label>
    <length>10</length>
    <type>Text</type>
</CustomField>