objects/Allstream_Service_Order_Item__c/fields/Location_A__c.field-meta.xml
<CustomField>
    <fullName>Location_A__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location A</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Order Products (Location A)</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>