objects/Allstream_Service_Order_Item__c/fields/Location_Z__c.field-meta.xml
<CustomField>
    <fullName>Location_Z__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location Z</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>