objects/Allstream_Service_Order_Item__c/fields/NRR_Amount__c.field-meta.xml
<CustomField>
    <fullName>NRR_Amount__c</fullName>
    <label>NRR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>