objects/Allstream_Service_Order_Item__c/fields/Old_Billing_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Account_ID__c</fullName>
    <label>Old Billing Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>