objects/Allstream_Service_Order_Item__c/fields/Old_Building_Z_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Building_Z_Id__c</fullName>
    <label>Old Building Z Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>