objects/Allstream_Service_Order_Item__c/fields/Old_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Old_Created_By__c</fullName>
    <label>Old Created By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>