objects/Allstream_Service_Order_Item__c/fields/Old_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Created_Date__c</fullName>
    <label>Old Created Date</label>
    <type>DateTime</type>
</CustomField>