objects/Allstream_Service_Order_Item__c/fields/Old_Location_A_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Location_A_Id__c</fullName>
    <label>Old Location A Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>