objects/Allstream_Service_Order_Item__c/fields/Old_Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Order_Item_Id__c</fullName>
    <label>Old_Order_Item_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>