objects/Allstream_Service_Order_Item__c/fields/Old_Order_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Order_Item_Number__c</fullName>
    <label>Old Order Item Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>