objects/Allstream_Service_Order_Item__c/fields/Postal_Code_Z__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Z__c</fullName>
    <label>Postal_Code_Z</label>
    <length>7</length>
    <type>Text</type>
</CustomField>