objects/Allstream_Service_Order_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Fee</fullName>
            </value>
            <value>
                <fullName>Business Dial Up</fullName>
            </value>
            <value>
                <fullName>Business Line</fullName>
            </value>
            <value>
                <fullName>Business Trunk</fullName>
            </value>
            <value>
                <fullName>Centrex</fullName>
            </value>
            <value>
                <fullName>Construction Fee</fullName>
            </value>
            <value>
                <fullName>Data Other</fullName>
            </value>
            <value>
                <fullName>DDOS Protection</fullName>
            </value>
            <value>
                <fullName>Dedicated T1</fullName>
            </value>
            <value>
                <fullName>DID</fullName>
            </value>
            <value>
                <fullName>Digital Trunk</fullName>
            </value>
            <value>
                <fullName>Dry Loop</fullName>
            </value>
            <value>
                <fullName>DSL</fullName>
            </value>
            <value>
                <fullName>Equipment Lease</fullName>
            </value>
            <value>
                <fullName>Expedite Fees</fullName>
            </value>
            <value>
                <fullName>Global MPLS</fullName>
            </value>
            <value>
                <fullName>Iaas (Compugen) – Cloud Compute</fullName>
            </value>
            <value>
                <fullName>Iaas (Compugen) – Data Appliance</fullName>
            </value>
            <value>
                <fullName>Iaas (Compugen) – End Point Security</fullName>
            </value>
            <value>
                <fullName>IaaS - Hosting</fullName>
            </value>
            <value>
                <fullName>Installation Charge</fullName>
            </value>
            <value>
                <fullName>Internet 10G</fullName>
            </value>
            <value>
                <fullName>Internet E10</fullName>
            </value>
            <value>
                <fullName>Internet E100</fullName>
            </value>
            <value>
                <fullName>Internet E1000</fullName>
            </value>
            <value>
                <fullName>Internet E10G</fullName>
            </value>
            <value>
                <fullName>Internet Feature</fullName>
            </value>
            <value>
                <fullName>Internet ISDN</fullName>
            </value>
            <value>
                <fullName>Internet Other</fullName>
            </value>
            <value>
                <fullName>Internet T1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>