objects/Allstream_Service_Order_Item__c/fields/Province_A__c.field-meta.xml
<CustomField>
    <fullName>Province_A__c</fullName>
    <label>Province A</label>
    <length>2</length>
    <type>Text</type>
</CustomField>