objects/Allstream_Service_Order_Item__c/fields/Room_A__c.field-meta.xml
<CustomField>
    <fullName>Room_A__c</fullName>
    <label>Room A</label>
    <length>50</length>
    <type>Text</type>
</CustomField>