objects/Allstream_Service_Order_Item__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>