objects/Allstream_Service_Order_Item__c/fields/Vendor_Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Circuit_ID__c</fullName>
    <label>Vendor Circuit ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>