objects/Allstream_Service_Order_Item__c/fields/Vendor_MRC__c.field-meta.xml
<CustomField>
    <fullName>Vendor_MRC__c</fullName>
    <label>Vendor MRC</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>