objects/Allstream_Service_Order_Item__c/fields/Vendor_NRC__c.field-meta.xml
<CustomField>
    <fullName>Vendor_NRC__c</fullName>
    <label>Vendor NRC</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>