objects/Allstream_Service_Order_Item__c/fields/Zayo_Account__c.field-meta.xml
<CustomField>
    <fullName>Zayo_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Zayo Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>contains</operation>
            <value>&quot;Zayo&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products (Zayo Account)</relationshipLabel>
    <relationshipName>Order_Products2</relationshipName>
    <type>Lookup</type>
</CustomField>