objects/Allstream_Service_Order_Item__c/fields/Zayo_MRC__c.field-meta.xml
<CustomField>
    <fullName>Zayo_MRC__c</fullName>
    <label>Zayo MRC</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>